--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,5 +1,3 @@
-
-
 <body>
     <header>
     <nav id="nav-bar">
@@ -10,16 +8,19 @@
     <h1>Results for: {{artist}}</h1>
     {{#each items}}
         <div>
-        <div>
-            {{#with images.[1]}}  
-            <img height="300" src="{{url}}" alt={{name}}>
-            {{/with}}
-        </div>
-        <div>
-            <h3>{{name}}</h3>
-            <h4>Followers {{follorers.total}}</h4>
-            <h4>Trending Score {{popularity}} </h4>
-        </div>  
+            <div>
+                {{#with images.[1]}}  
+                <img height="300" src="{{url}}" alt={{name}}>
+                {{/with}}
+            </div>
+            <div>
+                <h3>{{name}}</h3>
+                <h4>Followers {{follorers.total}}</h4>
+                <h4>Trending Score {{popularity}} </h4>
+                <div>
+                    <a href="/albums/{{id}}?artist={{../artist}}" method="GET" name="artistId">See albums</a>
+                </div>
+            </div>  
         </div>
     {{/each}}
     </div>
