--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
+<img class="banner" src="./images/portrait-curly-pink-haired-woman-massive-white-headphones.jpg" width="900px"/>
 <h2>Search your favorite artist</h2>
-    <form action="/artist-search" method="GET">
-        <label>Artist name</label>
-        <input required type="text" name="artist" placeholder="search"/>
-        <button type="submit">Search</button>
+    <form class="form" action="/artist-search" method="GET">
+        <input required class="search" type="text" name="artist" placeholder="search"/>
+        <button type="submit" class="myButton">Search</button>
     </form>
