--- a/views/tracks.hbs
+++ b/views/tracks.hbs
@@ -1,9 +1,10 @@
-<body>
-    <header>
+<header>
         <nav id="nav-bar">
-            <a href="/artist-search?artist={{artist}}"> 🎧 Return</a>
+            <a href="/" class="myButton"> 🎧 Return</a>
         </nav>
-    </header>
+        <img class="banner2" src="/images/—Pngtree—png music player background_8468984.png" height="250px" />
+</header>
+<body>
     <div>
         <div>
             <h2>Tracks</h2>
